--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .padding-col{
-    padding: 40px 20px 20px 20px;
+    padding: 40px ;
 }
 
 .margin-col{
@@ -77,6 +77,12 @@
 }
 
 h1{
+    font-size: 60px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+h2{
     font-size: xx-large;
     font-weight: 900;
     text-transform: uppercase;
