--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
 }
 
 .margin-col{
-    margin-top: 30px;
+    margin: 30px 0;
+
 }
 .container-sm{
     width: 991px;
@@ -92,8 +93,9 @@ h2{
     border: solid 1px lightgrey;
 }
 
-p > strong{
-    padding-top: 30px;
+li, hr{
+    margin-top: 15px;
+    list-style-type: none;
 }
 
 /* BG */
@@ -123,16 +125,17 @@ header{
     margin: 10px;
 }
 
-li{
-    list-style: none;
-}
+
 
 .center-text{
     text-align: center;
 }
 .center-title{
     justify-content: center;
-    
+}
+
+.margin-top0{
+    margin-top: 0;
 }
 /* MAIN */
 
