--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@
     display: flex;
 }
 
+.col-20{
+    width: 20%;
+}
+
 .col-30{
     width: 30%;
 }
@@ -189,6 +193,10 @@ header{
   display: flex;
 }
 
+.space-around{
+    display: flex;
+    justify-content: space-between;
+}
 .arrow{
     line-height: 4;
     font-size: xx-large;
@@ -231,5 +239,14 @@ header{
     flex-wrap: wrap;
 }
 
+.line-middle{
+    line-height: 2;
+}
+
 
 /* FOOTER */
+
+footer{
+    background-color: black;
+    color: white;
+}
